# make_video

./: .gitignore  CMakeLists.txt  zig-x86_64-toolchain.cmake  zigw.cpp
cmake/: zig-toolchain.cmake
resources/: quad.vs.glsl  screen.fs.glsl  screen.vs.glsl
src/: glad.h  main.cpp  pch.cpp  pch.hpp  shader.h
